refactor: use getFirst() method for list